<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/home_controls_bg"
    >
    <TextView
        android:id="@+id/SetPasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SetPasscode"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ReEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReEnter"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4">
            <requestFocus />
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center">
        <Button
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:id="@+id/btnok"
            android:text="@string/btnok"
            />
        <Button
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:id="@+id/btncancel"
            android:text="@string/btncancel"
            android:layout_weight="0.11" />
    </LinearLayout>
</LinearLayout>
